-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.3.0 RC1
-
None
-
openSUSE Factory, full log can be found at https://build.opensuse.org/build/KDE:Qt53/openSUSE_Factory/x86_64/libqt5-qtbase/_log
-
ee3dea8d3fdc9477f3a54e5457e19be1d0c61de9
Latest stable branch fails to build with mentioned components, probably introduced with commit 9bb634a6176c639bd6b52d58151e9927c30919d0.
Error is:
[ 763s] qxcbkeyboard.cpp: In member function 'void QXcbKeyboard::printKeymapError(const QString&) const':
[ 763s] qxcbkeyboard.cpp:672:11: error: 'DFLT_XKB_CONFIG_ROOT' was not declared in this scope
[ 763s] : DFLT_XKB_CONFIG_ROOT;
[ 763s] ^
[ 763s] Makefile.xcb-plugin:3719: recipe for target '.obj/qxcbkeyboard.o' failed
[ 763s] make[5]: *** [.obj/qxcbkeyboard.o] Error 1
[ 763s] make[5]: *** Waiting for unfinished jobs....