src/plugins/platforms/xcb/qxcbkeyboard.cpp
@@ -3504,8 +3504,8 @@ operator|::
 name|printKeymapError
 parameter_list|(
 specifier|const
-name|QString
-modifier|&
+name|char
+modifier|*
 name|error
 parameter_list|)
 specifier|const
@@ -3513,99 +3513,44 @@ block|{
 name|qWarning
 argument_list|()
 operator|<<
-literal|"Qt: "
-operator|<<
 name|error
+operator|<<
+literal|"Current XKB configuration data search paths are: "
 expr_stmt|;
-comment|// check if XKB config root is a valid path
-specifier|const
-name|QDir
-name|xkbRoot
+for|for
+control|(
+name|unsigned
+name|int
+name|i
 init|=
-name|qEnvironmentVariableIsSet
+literal|0
+init|;
+name|i
+operator|<
+name|xkb_context_num_include_paths
 argument_list|(
-literal|"QT_XKB_CONFIG_ROOT"
+name|xkb_context
 argument_list|)
-condition|?
-name|QString
-operator|::
-name|fromLocal8Bit
-argument_list|(
-name|qgetenv
-argument_list|(
-literal|"QT_XKB_CONFIG_ROOT"
-argument_list|)
-argument_list|)
-else|:
-name|DFLT_XKB_CONFIG_ROOT
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|xkbRoot
-operator|.
-name|exists
-argument_list|()
-operator|||
-name|xkbRoot
-operator|.
-name|dirName
-argument_list|()
-operator|!=
-literal|"xkb"
-condition|)
-block|{
+condition|;
+operator|++
+name|i
+control|)
 name|qWarning
 argument_list|()
 operator|<<
-literal|"Set QT_XKB_CONFIG_ROOT to provide a valid XKB configuration data path, current search paths: "
-operator|<<
-name|xkbRoot
-operator|.
-name|path
-argument_list|()
-operator|<<
-literal|". Use ':' as separator to provide several search paths."
+name|xkb_context_include_path_get
+argument_list|(
+name|xkb_context
+argument_list|,
+name|i
+argument_list|)
 expr_stmt|;
-return|return;
-block|}
 name|qWarning
 argument_list|()
 operator|<<
-literal|"_XKB_RULES_NAMES property contains:"
-operator|<<
-literal|"\nrules : "
-operator|<<
-name|xkb_names
-operator|.
-name|rules
-operator|<<
-literal|"\nmodel : "
-operator|<<
-name|xkb_names
-operator|.
-name|model
-operator|<<
-literal|"\nlayout : "
-operator|<<
-name|xkb_names
-operator|.
-name|layout
-operator|<<
-literal|"\nvariant : "
-operator|<<
-name|xkb_names
-operator|.
-name|variant
-operator|<<
-literal|"\noptions : "
-operator|<<
-name|xkb_names
-operator|.
-name|options
-operator|<<
-literal|"\nIf this looks like a valid keyboard layout information then you might need to "
-literal|"update XKB configuration data on the system (http://cgit.freedesktop.org/xkeyboard-config/)."
+literal|"Use QT_XKB_CONFIG_ROOT environmental variable to provide an additional search path, "
+literal|"add ':' as separator to provide several search paths and/or make sure that XKB configuration data "
+literal|"directory contains recent enough contents, to update please see http://cgit.freedesktop.org/xkeyboard-config/ ."
 expr_stmt|;
 block|}
 end_function
@@ -3704,7 +3649,7 @@ condition|)
 block|{
 name|printKeymapError
 argument_list|(
-literal|"Failed to create XKB context!"
+literal|"Qt: Failed to create XKB context!"
 argument_list|)
 expr_stmt|;
 name|m_config
@@ -3865,10 +3810,9 @@ expr_stmt|;
 block|}
 else|else
 block|{
-comment|// failed to compile from RMLVO, give a verbose error message
 name|printKeymapError
 argument_list|(
-literal|"Qt: Failed to compile a keymap!"
+literal|"Failed to compile a keymap!"
 argument_list|)
 expr_stmt|;
 name|m_config
